tests/toylang/neg/000756_mutation.toylang
program a = { a = 0 a; } .
